--- a/css/TRABAJO.css
+++ b/css/TRABAJO.css
@@ -5,7 +5,7 @@
   .CORRECCION{
     width: 800px;
     height: 925px;
-    background-color: #FFD700;
+    background-color: #FF00F5;
   }
   table {
     width:100%;
@@ -439,7 +439,7 @@ transition: 0.9s;
 @media (max-width: 1024px)
 {
   .CORRECCION {
-    background-color: rgb(0, 255, 106);
+    background-color: #FF00F5;
     width: 1024px;
     height: 925px
     }
